fixed css and add content

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,74 +1,126 @@
-<section class="flex flex-col w-full h-full z-10">
-
-  <div class="flex w-full h-full md:h-screen justify-center items-center bg-[#9CA48D] md:pb-20" id="home">
+<section class="lg:flex lg:flex-col bloc w-full h-full z-10">
+  <div class="flex w-full h-full md:h-screen justify-center items-center bg-[#9CA48D] md:pb-20"
+       id="home">
     <div class="flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
       <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName2">{{name}}</h2>
       <h3 class="an-1 text-xl font-medium">{{introduction}}</h3>
-      <img src="{{homeImg}}" alt="" width="500px" height="400px" class="an-1 z-100 object-contain md:object-none">
+      <img src="{{homeImg}}"
+           alt=""
+           width="500px"
+           height="400px"
+           class="an-1 z-100 object-contain md:object-none">
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9CA48D] h-full md:h-screen w-full" id="therapy">
-    <div class="mx-auto max-w-7xl text-center">
-      <h2 class="text-2xl mt-20 lg:mt-0 lg:ml-40 font-bold tracking-tight sm:text-3xl">{{psyTitle}}</h2>
+  <div class="px-6 lg:px-8 bg-[#9CA48D] h-full md:h-screen w-full bloc lg:flex lg:flex-col"
+       id="therapy">
+    <div class="mx-auto max-w-7xl text-center h-full pt-20">
+      <h2 class="an-1 text-2xl mt-20 lg:mt-0 lg:ml-40 font-bold tracking-tight sm:text-3xl">{{psyTitle}}</h2>
       <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center">
         <div class="w-full md:w-1/2 m-auto">
-          <img src="{{homeImg}}" alt="office" class="rounded-xl">
+          <img src="{{homeImg}}"
+               alt="office"
+               class="rounded-xl">
         </div>
         <div class="w-full md:w-1/2 bg-[#474747] rounded-xl">
-          <p class="text-justify text-white mx-4 my-4">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa.
-            Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et.
-            Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe?
-            Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam, voluptatem consequuntur, vel qui explicabo cupiditate. Natus ipsum delectus illum culpa adipisci, nostrum doloribus optio architecto voluptates.
-          </p>
+          <p class="an-1 text-justify text-white mx-4 my-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa. Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et. Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe? Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam, voluptatem consequuntur, vel qui explicabo cupiditate. Natus ipsum delectus illum culpa adipisci, nostrum doloribus optio architecto voluptates. </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full lg:h-screen" id="psy">
-    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full md:h-auto">
-      <h2 class="text-2xl font-bold tracking-tight sm:text-3xl pt-5">{{therapyst}}</h2>
-      <div class="mt-8 text-lg leading-8 text-justify bloc xl:flex gap-10 justify-center w-[95%] m-auto">
-        <div class="lg:grid-cols-2 flex lg:flex-row flex-col w-full lg:w-2/3 rounded-xl m-auto mb-10">
+  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full lg:h-screen pt-20 md:pt-0"
+       id="psy">
+    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full lg:h-screen pt-20">
+      <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl pt-5">{{therapyst}}</h2>
+      <div class="mt-8 text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center w-[95%] m-auto">
+        <div class="lg:grid-cols-2 flex h-full lg:flex-row flex-col w-full lg:w-2/3 rounded-xl m-auto mb-10">
           <div class="lg:w-[48%]">
-            <p class="text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro1}}</p>
-            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text1}}</p>
-            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text2}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro1}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text1}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text2}}</p>
           </div>
           <div class="lg:w-[52%]">
-            <p class="text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro2}}</p>
-            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text4}}</p>
-            <p class="text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text3}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro2}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text4}}</p>
+            <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text3}}</p>
           </div>
         </div>
-        <div class="w-[90%] md:w-1/3 m-auto">
-          <img src="{{aliseeImg}}" alt="alisée" class="">
+        <div class="w-[90%] lg:w-1/3 m-auto h-full">
+          <img src="{{aliseeImg}}"
+               alt="alisée"
+               class="">
         </div>
       </div>
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full" id="infos">
-    <div class="mx-auto max-w-8xl text-center h-full">
-      <h2 class="text-2xl font-bold tracking-tight sm:text-3xl mt-10 lg:mt-0 pt-5">{{info}}</h2>
-      <div class="text-lg leading-8 text-justify bloc md:flex gap-10 justify-center max-w-8xl m-auto h-full">
-        <div class="w-full md:w-1/2 m-auto z-1 h-full flex justify-center items-center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.1640674517057!2d4.8476745!3d45.7679021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb150e31e24b%3A0x25dca6ac81c8dab5!2sAlis%C3%A9e%20Eggermont!5e0!3m2!1sfr!2sfr!4v1719434135950!5m2!1sfr!2sfr" width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="map"></iframe>
+  <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full bloc lg:flex lg:flex-col pt-20 md:pt-0 pb-20 md:mb-0"
+       id="infos">
+    <div class="mx-auto max-w-8xl text-center h-full pt-20">
+      <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl mt-10 lg:mt-0 pt-5">{{info}}</h2>
+      <div class="text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center max-w-8xl m-auto mt-28">
+        <div class="an-1 w-full lg:w-1/2 m-auto z-1 flex justify-center items-center">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.1640674517057!2d4.8476745!3d45.7679021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb150e31e24b%3A0x25dca6ac81c8dab5!2sAlis%C3%A9e%20Eggermont!5e0!3m2!1sfr!2sfr!4v1719434135950!5m2!1sfr!2sfr"
+                  width="600"
+                  height="500"
+                  style="border:0;"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                  title="map"></iframe>
         </div>
-        <div class="grid grid-cols-2 h-full w-full md:w-1/2 rounded-xl mt-10 lg:mt-0">
-          <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium ex expedita dolorum nulla eaque delectus asperiores pariatur, cumque rerum quibusdam?</div>
-          <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate reprehenderit aspernatur sit eligendi esse consequatur debitis obcaecati voluptates cumque perferendis?</div>
+        <div class="items-start justify-center gap-16 grid grid-cols-2 h-full w-full lg:w-1/2 rounded-xl mt-10 lg:mt-0">
+          <div class="flex flex-col flex-wrap gap-6 border-r-2 border-[#9ca48d60] pr-2">
+            <div class="an-1">
+              <h4 class="text-[#596551] font-bold">Email :</h4>
+              <p class="mt-2">{{infos.email}}</p>
+            </div>
+            <div class="an-1">
+              <h4 class="text-[#596551] font-bold">Téléphone :</h4>
+              <p>{{infos.phone}}</p>
+            </div>
+            <div class="an-1">
+              <h4 class="text-[#596551] font-bold">Adresse :</h4>
+              <p>{{infos.address}}</p>
+            </div>
+            <div class="an-1">
+              <h4 class="text-[#596551] font-bold">Accéder au cabinet :</h4>
+              <p>{{infos.office.metro}}</p>
+              <p class="pt-3">{{infos.office.bus1}}</p>
+              <p>{{infos.office.bus2}}</p>
+              <p>{{infos.office.bus3}}</p>
+            </div>
+          </div>
+          <div class="flex flex-wrap gap-6">
+            <div>
+              <h4 class="text-[#596551] font-bold an-1">Tarifs</h4>
+              <p class="mt-2 an-1">{{infos.tarifs.psychotherapieDeSoutien}}</p>
+              <p class="mt-2 an-1">{{infos.tarifs.psychanalyse}}</p>
+              <p class="mt-2 an-1">{{infos.tarifs.note}}</p>
+            </div>
+            <div class="mt-2">
+              <h4 class="text-[#596551] font-bold an-1">Durée de la séance</h4>
+              <p class="an-1">{{infos.dureeDeLaSeance}}</p>
+            </div>
+            <div class="mt-2">
+              <h4 class="text-[#596551] font-bold an-1">Mode de réglement</h4>
+              <p class="an-1">{{infos.modeDeReglement}}</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="flex w-full h-screen justify-center bg-[#9CA48D] pb-20" id="contact">
+  <div class="flex w-full h-screen justify-center bg-[#9CA48D]"
+       id="contact">
     <h2 class="text-2xl font-bold tracking-tight sm:text-2xl pt-28">{{rdv}}</h2>
-    <div id="ie_dynamic_widget" data-base-color="">
-      <script type="text/javascript" src="https://www.psychologue.net/widget/company_schedule?com=434216&h=ea20be21d68492090b0e60710cf4f60d&v=10&utm_source=434216&utm_medium=widget&utm_campaign=widget-company_schedule"></script> </div>
+    <div id="ie_dynamic_widget"
+         data-base-color=""></div>
+    <script type="text/javascript"
+            src="https://www.psychologue.net/widget/company_schedule?com=434216&h=ea20be21d68492090b0e60710cf4f60d&v=10&utm_source=434216&utm_medium=widget&utm_campaign=widget-company_schedule">
+            </script>
   </div>
 
 </section>
