more update + changed img

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <section class="z-100 h-20 fixed w-full flex bg-[#9CA48D] px-10 text-black items-center justify-between">
-  <div class="flex items-center headerName2 text-4xl max-w-80 w-full">
+  <div class="flex items-center headerName text-4xl max-w-80 w-full">
     {{headerName}}
   </div>
   <div class="hidden lg:flex items-center h-full text-lg font-semibold justify-end w-full">
