--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,14 +1,14 @@
 <section class="lg:flex lg:flex-col bloc w-full h-full z-10">
   <div class="flex w-full h-full md:h-screen justify-center items-center bg-[#9CA48D] md:pb-20"
        id="home">
-    <div class="flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
-      <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName2">{{name}}</h2>
+    <div class="pt-28 md:pt-0 flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
+      <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName">{{name}}</h2>
       <h3 class="an-1 text-xl font-medium">{{introduction}}</h3>
-      <img src="{{homeImg}}"
+      <img src="{{homeImg2}}"
            alt=""
-           width="500px"
-           height="400px"
-           class="an-1 z-100 object-contain md:object-none">
+           width="800px"
+           height="700px"
+           class="an-1 z-100 object-contain">
     </div>
   </div>
 
@@ -55,9 +55,9 @@
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full bloc lg:flex lg:flex-col pt-20 md:pt-0 pb-20 md:mb-0"
+  <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full bloc lg:flex lg:flex-col pt-10 md:pt-0 pb-20 md:mb-0"
        id="infos">
-    <div class="mx-auto max-w-8xl text-center h-full pt-20">
+    <div class="mx-auto max-w-8xl text-center h-full pt-10">
       <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl mt-10 lg:mt-0 pt-5">{{info}}</h2>
       <div class="text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center max-w-8xl m-auto mt-28">
         <div class="an-1 w-full lg:w-1/2 m-auto z-1 flex justify-center items-center">
