--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,37 +1,61 @@
 <section class="lg:flex lg:flex-col bloc w-full h-full z-10">
   <div class="flex w-full h-full md:h-screen justify-center items-center bg-[#9CA48D] md:pb-20"
        id="home">
-    <div class="pt-28 md:pt-0 flex flex-col justify-center items-center w-full gap-10 bg-[#ded9d5] h-[90%] textured-background">
+    <div class="pt-28 md:pt-0 md:pb-0 pb-28 flex flex-col justify-center items-center w-full bg-[#ded9d5] h-full textured-background">
       <h2 class="an-1 text-4xl md:text-6xl font-bold tracking-tight headerName">{{name}}</h2>
       <h3 class="an-1 text-xl font-medium">{{introduction}}</h3>
       <img src="{{homeImg2}}"
            alt=""
-           width="600px"
-           height="500px"
-           class="an-1 z-100 object-contain">
+           width="550px"
+           height="450px"
+           class="an-1 z-100 object-contain" loading="lazy">
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9CA48D] h-full md:h-screen w-full bloc lg:flex lg:flex-col"
+  <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full bloc lg:flex lg:flex-col"
        id="therapy">
-    <div class="mx-auto max-w-7xl text-center h-full">
-      <h2 class="an-1 text-2xl mt-5 lg:mt-0 lg:ml-40 font-bold tracking-tight sm:text-3xl">{{psyTitle}}</h2>
-      <div class="mt-8 text-lg leading-8 text-justify bloc md:flex gap-10 justify-center">
-        <div class="w-full md:w-1/2 bg-[#474747] rounded-xl">
-          <p class="an-1 text-justify text-white mx-4 my-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sint omnis ullam provident, error pariatur eum numquam repudiandae sapiente. Aspernatur, ducimus. Ullam amet hic quas et! Aliquid quo ullam culpa. Aliquid debitis facere nulla, quo commodi magni, consequuntur esse alias fugiat mollitia quis provident repellat odit totam velit eligendi. Aut assumenda eligendi voluptatem magni ullam tempore laudantium ad possimus et. Natus facere dolorum error dolor cupiditate sint fuga et incidunt, sed ut harum repellendus nulla ex ipsa quod sit! Culpa maxime magnam repudiandae cum eveniet aspernatur accusamus neque hic saepe? Animi quia accusantium aliquam ipsa nihil adipisci officia, illum quas corporis rerum quibusdam, voluptatem consequuntur, vel qui explicabo cupiditate. Natus ipsum delectus illum culpa adipisci, nostrum doloribus optio architecto voluptates. </p>
+    <div class="mx-auto text-center h-full">
+      <h2 class="an-1 text-2xl lg:mt-0 font-bold tracking-tight sm:text-3xl pt-20">{{therapy.title}}</h2>
+      <div class="mt-8 text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center lg:grid-cols-2">
+        <div class="w-full lg:w-1/2 bg-[#474747a3] m-auto flex flex-col gap-3">
+          <p class="an-1 text-justify text-white mx-4 my-4">
+            {{therapy.intro}}
+          </p>
+          <div class="w-full h-full">
+            <div *ngFor="let category of therapy.categories; let i = index">
+              <div class="cursor-pointer flex gap-3 bg-[#9ca48db6] text-[#474747] mt-2 lg:w-80 w-full items-center h-10 mb-4 lg:ml-4 justify-between" (click)="toggleDropDown(i)">
+                <h4 class="flex an-1 text-justify justify-center mx-4 my-4 font-medium">
+                  {{category.title}}
+                </h4>
+                @if (isOpen) {
+                  <span class="material-symbols-outlined">keyboard_arrow_up</span>
+                } @else {
+                  <span class="material-symbols-outlined">keyboard_arrow_down</span>
+                }
+              </div>
+              <div class="an-1 text-justify text-white mx-4 my-4" *ngIf="openedCategoryIndex === i">
+                {{category.text}}
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full sm:w-3/4 lg:w-1/2 h-[400px] justify-center flex m-auto mt-10 lg:mt-0">
+          <img src="{{officeImg}}"
+               alt="therapy"
+               class="pr-3 w-full h-full">
         </div>
       </div>
     </div>
   </div>
 
-  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full lg:h-screen pt-20 md:pt-0 lg:flex lg:flex-col justify-center"
+  <div class="px-6 lg:px-8 bg-[#9ca48d96] h-full pt-20 md:pt-0 lg:flex lg:flex-col justify-center"
        id="psy">
-    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full lg:h-screen">
+    <div class="mx-auto max-w-8xl text-center bg-[#F0ECE9] h-full">
     <div class="flex flex-col w-full h-full">
       <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl pt-5">{{therapyst}}</h2>
-      <div class="h-full text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center w-full">
+      <div class="h-full text-lg leading-8 text-justify bloc lg:flex gap-5 justify-center w-full mt-2">
         <div class="items-center lg:grid-cols-2 flex h-full lg:flex-row flex-col w-full lg:w-2/3 rounded-xl">
-          <div class="lg:w-[47%] flex flex-col justify-center h-full">
+          <div class="lg:w-[47%] flex flex-col h-full">
             <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro1}}</p>
             <div>
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text1}}</p>
@@ -39,7 +63,7 @@
             </div>
 
           </div>
-          <div class="lg:w-[53%] flex flex-col justify-center h-full">
+          <div class="lg:w-[53%] flex flex-col h-full">
             <p class="an-1 text-justify text-[#596551] mx-4 my-4 text-xl font-bold">{{therapystInfos.intro2}}</p>
             <div>
               <p class="an-1 text-justify text-[#596551] mx-4 my-4">{{therapystInfos.text4}}</p>
@@ -60,9 +84,9 @@
 
   <div class="px-6 lg:px-8 bg-[#9ca48d60] h-full lg:h-screen w-full bloc lg:flex lg:flex-col pt-10 md:pt-0 pb-20 md:mb-0"
        id="infos">
-    <div class="mx-auto max-w-8xl text-center h-full pt-10">
+    <div class="mx-auto max-w-8xl text-center h-full pt-20">
       <h2 class="an-1 text-2xl font-bold tracking-tight sm:text-3xl mt-10 lg:mt-0 pt-5">{{info}}</h2>
-      <div class="text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center max-w-8xl m-auto mt-28">
+      <div class="text-lg leading-8 text-justify bloc lg:flex gap-10 justify-center max-w-8xl m-auto mt-12">
         <div class="an-1 w-full lg:w-1/2 m-auto z-1 flex justify-center items-center">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2783.1640674517057!2d4.8476745!3d45.7679021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f4eb150e31e24b%3A0x25dca6ac81c8dab5!2sAlis%C3%A9e%20Eggermont!5e0!3m2!1sfr!2sfr!4v1719434135950!5m2!1sfr!2sfr"
                   width="600"
@@ -73,42 +97,42 @@
                   referrerpolicy="no-referrer-when-downgrade"
                   title="map"></iframe>
         </div>
-        <div class="items-start justify-center gap-16 grid grid-cols-2 h-full w-full lg:w-1/2 rounded-xl mt-10 lg:mt-0">
-          <div class="flex flex-col flex-wrap gap-6 border-r-2 border-[#9ca48d60] pr-2">
+        <div class="items-start justify-center gap-8 md:gap-16 md:grid md:grid-cols-2 h-full w-full lg:w-1/2 rounded-xl mt-10 lg:mt-0">
+          <div class="flex flex-col flex-wrap gap-6 md:border-r-2 border-[#9ca48d60] pr-2">
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Email :</h4>
-              <p class="mt-1 pl-3">{{infos.email}}</p>
+              <p class="mt-1 md:pl-3">{{infos.email}}</p>
             </div>
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Téléphone :</h4>
-              <p class="pl-3 mt-1">{{infos.phone}}</p>
+              <p class="md:pl-3 mt-1">{{infos.phone}}</p>
             </div>
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Adresse :</h4>
-              <p class="pl-3 mt-1">{{infos.address}}</p>
+              <p class="md:pl-3 mt-1">{{infos.address}}</p>
             </div>
             <div class="an-1">
               <h4 class="text-[#596551] font-bold">Accéder au cabinet :</h4>
-              <p class="pl-3 mt-1">{{infos.office.metro}}</p>
-              <p class="pt-3 pl-3">{{infos.office.bus1}}</p>
-              <p class="pl-3">{{infos.office.bus2}}</p>
-              <p class="pl-3">{{infos.office.bus3}}</p>
+              <p class="md:pl-3 mt-1">{{infos.office.metro}}</p>
+              <p class="pt-3 md:pl-3">{{infos.office.bus1}}</p>
+              <p class="md:pl-3">{{infos.office.bus2}}</p>
+              <p class="md:pl-3">{{infos.office.bus3}}</p>
             </div>
           </div>
           <div class="flex flex-wrap gap-6">
             <div>
-              <h4 class="text-[#596551] font-bold an-1">Tarifs</h4>
-              <p class="mt-2 an-1 pl-3 ">{{infos.tarifs.psychotherapieDeSoutien}}</p>
-              <p class="mt-2 an-1 pl-3">{{infos.tarifs.psychanalyse}}</p>
-              <p class="mt-2 an-1 pl-3 text-sm">{{infos.tarifs.note}}</p>
+              <h4 class="text-[#596551] font-bold an-1 mt-2 md:mt-0">Tarifs</h4>
+              <p class="mt-2 an-1 md:pl-3">{{infos.tarifs.psychotherapieDeSoutien}}</p>
+              <p class="mt-2 an-1 md:pl-3">{{infos.tarifs.psychanalyse}}</p>
+              <p class="mt-2 an-1 md:pl-3 text-sm">{{infos.tarifs.note}}</p>
             </div>
             <div class="mt-2">
               <h4 class="text-[#596551] font-bold an-1">Durée de la séance</h4>
-              <p class="an-1 pl-3">{{infos.dureeDeLaSeance}}</p>
+              <p class="an-1 md:pl-3">{{infos.dureeDeLaSeance}}</p>
             </div>
             <div class="mt-2">
               <h4 class="text-[#596551] font-bold an-1">Mode de réglement</h4>
-              <p class="an-1 pl-3">{{infos.modeDeReglement}}</p>
+              <p class="an-1 md:pl-3">{{infos.modeDeReglement}}</p>
             </div>
           </div>
         </div>
