--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <section class="z-[1000] h-20 fixed w-full flex bg-[#9CA48D] px-10 text-black items-center justify-between">
-  <div class="flex items-center headerName text-4xl max-w-80 w-full">
-    {{headerName}}
-  </div>
+  <a href="#home" class="flex max-w-80 w-full">
+    <div class="flex items-center headerName text-4xl">
+      {{headerName}}
+    </div>
+  </a>
   <div class="hidden xl:flex items-center h-full text-lg font-semibold justify-end w-full">
     <div class="flex items-center h-full gap-6">
       <ng-container *ngFor="let element of navElements">
